For a detailed Changelog, see git logs.
Here are only reported the most visible changes.

New in 1.5.0 (since 1.4.0)
--------------------------

* Junkie can now forward traffic information to another junkie:

  junkie -p serializer.so -i eth0 &
  junkie -e '(open-deserializer)' -p some_plugin

* Compiled packet filters (much faster than tshark filters):

  junkie -i eth0 -p writer.so --file=/dev/stdout --method=csv \
    --netmatch '((tcp with (dst = 80)) (http with ((set? host) && (host =s "www.google.com"))))'


New in 1.4.0 (since 1.3.0)
--------------------------

* Basic HTTP server (for those unhappy with the parentheses)
  Activate at your own risk!

* Writer plugin can now be scripted from guile

* New connection tracking, simpler with fewer bugs

* Packet deduplication is now done per vlan and/or per ifaces
  (unless these are collapsed of course)

* You can use the same loging facility from guile than from C

* A way to send parsed infos to another program via socket

* When replaying a pcap file, can now patch timestamp with current time


New in 1.3.0 (since 1.2.0)
--------------------------

* Use guile-2

* Reopen network interfaces after they go down/up


New in 1.2.0 (since 1.1.0)
--------------------------

* Finer grained locks

* NBNS / LLMNR / MDNS name resolution protocols


New in 1.1.0 (since 1.0.0)
--------------------------

* Support for IP fragmentation, TCP reordering and stream reassembly

* Parsers for (some version of) PostgreSQL, MySQL and Oracle

* HTTP parser is now statefull

* Can replay pcap file at capture speed, can write pcap files (from C not Guile)

* Few sample plugins and many fixes!
