@@ -1,7 +1,9 @@
 SUBDIRS = tools proto .
 
 AM_CFLAGS = -std=c99 -Wall -W
-AM_CPPFLAGS = -I $(top_srcdir)/include -D_GNU_SOURCE -DTAGNAME=@TAGNAME@ -DBRANCHNAME=@BRANCHNAME@ -DCOMP_HOST=@COMP_HOST@ -DSYSCONFDIR=$(sysconfdir)
+AM_CPPFLAGS = -I $(top_srcdir)/include -D_GNU_SOURCE \
+              -DTAGNAME=@TAGNAME@ -DBRANCHNAME=@BRANCHNAME@ -DCOMP_HOST=@COMP_HOST@ \
+              -DSYSCONFDIR=$(sysconfdir) -DPKGLIBDIR=$(pkglibdir)
 
 bin_PROGRAMS = junkie
 dist_bin_SCRIPTS = juncli
