@@ -4,6 +4,9 @@ Here are only reported the most visible changes.
 New in 1.5.0 (since 1.4.0)
 --------------------------
 
+* Plugins are now loaded from system library directory (usualy
+  /usr/local/lib/junkie) if not found.
+
 * Junkie can now forward traffic information to another junkie:
 
   junkie -p serializer.so -i eth0 &
